<resources>
    <string name="app_name">bookstore</string>
    <string name="shelf">The Shelf contains</string>
    <string name="books">books.</string>
    <string name="product_name">product name</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="supplier_name">supplier name</string>
    <string name="supplier_phone_number">supplier phone number</string>
    <string name="insert_book">insert book</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="fahrenheit_451">Delete all books</string>
    <string name="insert_the_mummy_data">Insert The Mummy data</string>
    <string name="sell">SELL</string>
    <string name="priceTextView">Price : %d €</string>
    <string name="we_have">We have %d in store</string>
    <string name="don_t_have">We don\'t have in store</string>
    <string name="consolidate_book">Consolidate book</string>
    <string name="Detail_add_book">Add a new Book</string>
    <string name="Detail_edit_book">Edit an existing Book</string>
    <string name="insert_book_failed">insert book failed</string>
    <string name="insert_book_success">insert book success</string>
    <string name="update_book_failed">update book failed</string>
    <string name="update_book_success">update book success</string>
    <string name="re_stock">We can\'t sell until re-stock</string>
    <string name="book_sold">Book sold</string>
    <string name="sale_error">Error while proceeding</string>
    <string name="there_s_no_book_here">There\'s no book here</string>
    <string name="let_s_insert_some">let\'s insert some!</string>
    <string name="missing_fields">missing fields</string>
    <string name="quantity_updated">quantity updated:</string>
    <string name="delete_book">Delete Book</string>
    <string name="delete_this_book">Do you want to delete this book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="a_phone">a phone</string>
</resources>
