<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listViewColor"
    android:orientation="vertical"
    tools:context=".BookstoreActivity">

    <Button
        android:id="@+id/insert_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:background="@color/button"
        android:text="@string/insert_book"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/inventory"
        style="@style/normal"
        android:layout_below="@id/insert_book"
        android:background="@color/listViewColor"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/there_s_no_book_here"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/let_s_insert_some"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/emptyView_SubText" />
    </RelativeLayout>
</RelativeLayout>
